# CppCicada

./: CMakeLists.txt
doc/: windows.md
src/: actions.h  core.cpp  core.h  main.cpp  pages.cpp  pages.h  utf8.h
src/actions/: example.cpp  sequence_bruteforce.cpp
src/core/: ProcessedText.cpp  ProcessedText.h  Transformer.h
src/math/: prime.h  totient.h
src/transformer/: Atbash.cpp  Atbash.h  Sequence.cpp  Sequence.h  Shift.cpp  Shift.h  Totient.cpp  Totient.h  Transformer.h  Vigenere.cpp  Vigenere.h
src/util/: oeis.cpp  oeis.h  screen.cpp  screen.h  utf8.h
